<resources>
    <string name="app_name">TheMovie</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="media">Media</string>
    <string name="in_cinema">In cinema</string>
    <string name="unknown_user">Unknown user</string>
    <string name="films_serials_persons">Films, serials, persons</string>
    <string name="no_server_connection">No server connection</string>
    <string name="check_your_connection">check your connection</string>
    <string name="refresh">Refresh</string>
    <string name="on_tv">on TV</string>
    <string name="movie_description_1">
        Пять женщин вместе противостоят глобальной организации,
        владеющей мощным оружием. Героини создают группу под кодовым названием «355» и пытаются
        сделать всё, чтобы спасти мир от погружения в полный хаос.
    </string>
    <string name="movie_description_2">
        «Падение Луны» рассказывает о том, как Луна сходит с орбиты и направляется в сторону Земли,
        что грозит планете и человечеству гибелью. Понять причины катастрофы и предотвратить её
        пытается Джо Фаулер, которая в молодости была космонавтом. Вместе со своим товарищем по
        космическим полётам Брайаном Харпером и конспирологом К. Хаусманом она отправляется в
        космос и проникает внутрь Луны.
    </string>
    <string name="movie_description_3">
        Kingsman — организация супершпионов, действующая на благо человечества вдали от любопытных
        глаз. И один из первых и самых талантливых оперативников в истории организации — Конрад,
        молодой и наглый сын герцога Оксфордского. Как и многие его друзья он мечтал служить на
        благо Англии, но в итоге оказался втянут в тайный мир шпионов и убийц.
    </string>
    <string name="movie_description_4">
        Нейтан Дрейк и Виктор «Салли» Салливан, два искателя приключений, отправляются на поиски
        величайшего сокровища мира. Кроме того, они надеются найти улики, которые приведут их к
        давно потерянному брату Нейтана.
    </string>
    <string name="movie_description_5">
        Мошенник Стэн Карлайл объединяется с женщиной-психиатром, чтобы обманывать людей под видом
        чтения их мыслей.
    </string>
    <string name="movie_description_6">
        Баба Яга и Горбун решили сыграть свадьбу! Семья Уишбон точно не пропустит такой праздник,
        так как теперь они родственники! Но как раз во время церемонии НЕ молодую пару возлюбленных
        похищает девочка Старр, обладающая сверхчеловеческими способностями! Что ж, Уишбонам
        придется вновь прибегнуть к помощи магии и снова превратиться в монстров: мама вампир,
        папа Франкенштейн и их дети — непоседливый оборотень и обаятельная мумия, отправляются
        в новое приключение. Ведь свадьба должна состояться несмотря ни на что!
    </string>
    <string name="movie_description_7">
        "Король-солнце" Людовик XIV решил, что должен жить вечно. Некий колдун рассказал королю,
        что для получения эликсира вечной жизни нужно добыть настоящую русалку. Король отправляет
        на поиски сирены толпу авантюристов. Но на пути безумных планов встают двое - страж русалки
        и 18-летняя дочь Людовика, весьма непокорная принцесса.
    </string>
    <string name="movie_description_8">
        Безбашенная команда «Чудаков» снова в деле со свежей порцией веселых, дико абсурдных и
        — как это у них часто бывает — опасных комедийно-трюковых зарисовок, участниками которых
        также станут звездные новички.
    </string>
    <string name="movie_description_9">
        Поп-дива Кэт Вальдез и ее жених Бастиан — самая обсуждаемая пара года, миллионы людей
        следят за каждым их шагом в прямом эфире. Но за секунду до того, как связать себя узами
        брака с любимым на глазах у толпы фанатов, Кэт узнает, что он ей изменил. Пока весь ее мир
        рушится, Кэт встречается взглядами с незнакомцем, простым учителем математики, случайно
        попавшим на концерт, и принимает самое безумное решение — выйти замуж за него.
    </string>
    <string name="movie_description_10">
        Восьмилетняя Виктория переезжает с отцом из города в горы. Однажды на прогулке они
        знакомятся с пастухом, и он дарит девочке щенка по кличке Секрет, который
        становится ей лучшим другом. Лишь позже семья понимает, что из этого ласкового
        комочка шерсти вырастет опасный хищник. Но дружба не знает границ.
    </string>
    <string name="serial_description_1">
        В школе начинает распространяться эпидемия зомби-вируса. Оказавшиеся в ловушке
        старшеклассники вынуждены с боем прорываться наружу — иначе они пополнят ряды монстров.
    </string>
    <string name="serial_description_2">
        Миротворец (его настоящее имя — Кристофер Смит) — экстремист, который любит мир настолько,
        что готов ради него убивать. Однажды Смит выяснил, что его состояние — следствие
        психического расстройства, которое развилось после того, как он узнал, что его отец
        был начальником нацистского концлагеря. Миротворец верит, что призрак отца постоянно
        преследует его и критикует.
    </string>
    <string name="serial_description_3">
        Три брата Рейес (Хуан, Оскар и Франко) живут вместе со своей младшей сестрой Ливией.
        Однажды они узнают о связи своей сестры с богатым мужчиной, который годится ей в отцы.
        Бернардо Элисондо обещает жениться на девушке.
        Братья по-разному относятся к этому известию: Хуан, заменивший младшим отца, не соглашается на
        этот брак, а Оскар видит в этом возможность выбраться из нищеты. Но Бернардо не был до
        конца честен с Ливией - у него есть жена Габриэла и три дочери.
    </string>
    <string name="serial_description_4">
        Легендарный охотник за головами Боба Фетт и наемник Фенек Шанд должны отправиться в
        подземный мир галактики, в пески Татуина, для того, чтобы заявить свои права на территорию,
        которой когда-то правил Джабба Хатт и его преступный синдикат.
    </string>
    <string name="serial_description_5">
        Сериал рассказывает историю жизни семьи шерифа после того, как «зомби» — эпидемия
        апокалиптических масштабов захлестнула земной шар. Шериф Рик Граймс путешествует со
        своей семьей и небольшой группой выживших в поисках безопасного места для жизни. Но
        постоянный страх смерти каждый день приносит тяжелые потери, заставляя героев почувствовать
        глубины человеческой жестокости. Рик пытается спасти свою семью, и открывает для себя,
        что всепоглощающий страх тех, кто выжил, может быть опаснее бессмысленных мертвецов,
        бродящих по земле.
    </string>
    <string name="serial_description_6">
        Нет обзора, переведённого на русский язык. Помогите расширить базу данных, добавив его.
    </string>
</resources>