<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.gb.themovie.viewmodel.databinding.PopularMovieViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fragment_media_main_padding_left">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/fragment_main_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/media"
                    android:textSize="@dimen/title_text_size" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="Popular"
                    android:textSize="@dimen/subtitle_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/in_cinema"
                    android:textSize="@dimen/subtitle_text_size" />

                <FrameLayout
                    android:id="@+id/main_fragment_frame_layout_popular_in_cinema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_popular_in_cinema"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="invisible"
                        app:itemsViewModel="@{viewModel.dataMoviesFromServer}"
                        app:reverseLayout="true" />

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/progress_circular_popular_in_cinema"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:indeterminate="true"
                        android:visibility="visible" />
                </FrameLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/on_tv"
                    android:textSize="@dimen/subtitle_text_size" />

                <FrameLayout
                    android:id="@+id/main_fragment_frame_layout_popular_on_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:visibility="invisible"
                        android:id="@+id/recycler_popular_on_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:itemsViewModel="@{viewModel.dataOnTvMoviesFromServer}"
                        app:reverseLayout="true" />

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/progress_circular_popular_on_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:indeterminate="true"
                        android:visibility="visible" />
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>